tests/fixtures/invalid/round_float_float.py
# Cannot call round() with Float, Float
x = round(1.0, 1.0)
